--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="web.css
+  <link rel="stylesheet" href="web.css">
+  <title>My Python Portfolio</title>
 </head>
 <body>
     <header>
@@ -34,12 +35,12 @@
                 <tr>
                     <td>9:00 AM</td>
                     <td>Opening Keynote</td>
-                    <td>GeeksforGeeks Coding Plateform</td>
+                    <td>Coding Plateform</td>
                 </tr>
                 <tr>
                     <td>10:30 AM</td>
                     <td>Understanding AI and Machine Learning</td>
-                    <td>Mr. Arvind Kumar</td>
+                    <td>Mr. Kumar</td>
                 </tr>
                 <tr>
                     <td>1:00 PM</td>
@@ -49,7 +50,7 @@
                 <tr>
                     <td>2:00 PM</td>
                     <td>Exploring the Future of Cloud Computing</td>
-                    <td>Ms. Neha Gupta</td>
+                    <td>Ms. Gupta</td>
                 </tr>
             </tbody>
         </table>
