--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <h1>Welcome to Python in Mind</h1>
-        <p>Here you can check out my portfolio</p>
+        <h1>Here you can check out my portfolio</h1>
     </header>
     <nav>
         <a href="#about">About Me</a> |
