--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a href="#about">About Me</a> |
         <a href="#basics">Python Basics</a> |
         <a href="#numpy">Numpy</a> |
+        <a href="#matplotlib">Matplotlib</a>
         <a href="#contact">Contact</a>
     </nav>
     <section id="about">
