--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Python in Mind</h1>
+        <h1>Welcome to my website Python in Mind</h1>
         <h1>Here you can check out my portfolio</h1>
     </header>
     <nav>
@@ -14,6 +14,7 @@
         <a href="#basics">Python Basics</a> |
         <a href="#numpy">Numpy</a> |
         <a href="#matplotlib">Matplotlib</a>
+        <a href="#pandas">Pandas</a>
         <a href="#contact">Contact</a>
     </nav>
     <section id="about">
@@ -27,29 +28,34 @@
         <table>
             <thead>
                 <tr>
-                    <th>Time</th>
-                    <th>Session</th>
-                    <th>Contest</th>
+                    <th>Chapter</th>
+                    <th>Name</th>
+                    <th>Size</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>9:00 AM</td>
-                    <td>Opening Keynote</td>
-                    <td>Coding Plateform</td>
+                    <td>01</td>
+                    <td>Type Casting</td>
+                    <td>05</td>
                 </tr>
                 <tr>
-                    <td>10:30 AM</td>
-                    <td>Understanding AI and Machine Learning</td>
-                    <td>Mr. Kumar</td>
+                    <td>02</td>
+                    <td>Controlled structures and formated output</td>
+                    <td>04</td>
                 </tr>
                 <tr>
-                    <td>1:00 PM</td>
+                    <td>03</td>
                     <td>Lunch Break</td>
                     <td>-</td>
                 </tr>
                 <tr>
-                    <td>2:00 PM</td>
+                    <td>04</td>
+                    <td>Exploring the Future of Cloud Computing</td>
+                    <td>Ms. Gupta</td>
+                </tr>
+                <tr>
+                    <td>05</td>
                     <td>Exploring the Future of Cloud Computing</td>
                     <td>Ms. Gupta</td>
                 </tr>
